service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duhigure-service1
  namespace: duhigure
spec:
  type: NodePort
  selector:
    app: duhigure
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30091
      protocol: TCP
