ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duhigure-ingress
  namespace: duhigure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.duhigure.rw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duhigure-service
            port:
              number: 80
